Updated meta tags

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary" />
     <meta property="twitter:url" content="https://luisfadini.com/" />
     <meta property="twitter:title" content="Links do Luís Otávio" />
     <meta
